Added support for building containerized native image